--- a/package.json
+++ b/package.json
@@ -18,25 +18,27 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.0",
     "@nestjs-modules/mailer": "^1.8.1",
-    "@nestjs/apollo": "^10.1.7",
+    "@nestjs/apollo": "^10.2.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/graphql": "^10.1.7",
+    "@nestjs/graphql": "^10.2.1",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
-    "apollo-server-express": "^3.11.1",
+    "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.13.2",
     "date-fns": "^2.29.3",
     "express-jwt": "^7.7.7",
-    "graphql": "^16.6.0",
+    "graphql": "^16.9.0",
     "jwks-rsa": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
