--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -94,9 +95,7 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   },
-  "prisma":  {
+  "prisma": {
     "seed": "ts-node prisma/seed.ts"
   }
-
-
 }
