--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/serve-static": "^3.0.0",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "date-fns": "^2.29.3",
     "express-jwt": "^7.7.7",
@@ -94,9 +95,7 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   },
-  "prisma":  {
+  "prisma": {
     "seed": "ts-node prisma/seed.ts"
   }
-
-
 }
