--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@services/*": ["./src/http/services/*"],
-      "@resolvers/*": ["./src/http/graphql/resolvers/*"],
-      "@models/*": ["./src/http/graphql/models/*"],
-      "@inputs/*": ["./src/http/graphql/inputs/*"],
+      "@resolvers/*": ["src/http/rest/controllers/*"],
+      "@models/*": ["src/http/rest/models/*"],
+      "@inputs/*": ["src/http/rest/inputs/*"],
     }
   }
 }
