--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.735.0",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.4.3",
     "@nestjs/config": "^3.2.3",
@@ -37,6 +38,7 @@
     "express-jwt": "^8.4.1",
     "jwks-rsa": "^3.1.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
