--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ JWT_EXPIRATION=7d
 
 # Prisma
 DATABASE_URL="postgresql://docker:docker@localhost:5432/alimentados-backend?schema=public"
+
+# R2 api-eviroment variables
+R2_ENDPOINT=https://your-r2-endpoint.com
+R2_ACCESS_KEY=your-access-key
+R2_SECRET_KEY=your-secret-key
+R2_BUCKET_NAME=your-bucket-name
+R2_PUBLIC_URL=https://your-public-bucket-url
