--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "ngrok": "ngrok http http://localhost:3333"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.735.0",
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.4.3",
     "@nestjs/config": "^3.2.3",
@@ -34,6 +36,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
     "express-jwt": "^8.4.1",
     "jwks-rsa": "^3.1.0",
@@ -45,7 +48,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "svix": "^1.59.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.5",
@@ -54,6 +58,7 @@
     "@prisma/client": "^5.19.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.21",
     "@types/jest": "29.5.13",
     "@types/multer": "^1.4.12",
