--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "ngrok": "ngrok http --url=lasting-solely-macaw.ngrok-free.app 3333"
+    "ngrok": "ngrok http --url=lasting-solely-macaw.ngrok-free.app 3333",
+    "postinstall": "npx prisma generate"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.735.0",
