--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "ngrok": "ngrok http --url=lasting-solely-macaw.ngrok-free.app 3333",
-    "postinstall": "npx prisma generate"
+    "postinstall": "npx prisma generate",
+       "check-types": "tsc --pretty --noEmit"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.735.0",
@@ -51,11 +52,13 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@nestjs/cli": "^10.4.5",
     "@nestjs/schematics": "^10.1.4",
     "@nestjs/testing": "^10.4.3",
     "@prisma/client": "^5.19.1",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.21",
@@ -64,13 +67,14 @@
     "@types/node": "^22.5.5",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
-    "@typescript-eslint/parser": "^8.6.0",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
     "eslint": "^9.10.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.3.1",
+    "husky": "^9.1.7",
     "jest": "29.7.0",
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.3",
     "prisma": "^5.19.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
@@ -78,7 +82,8 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.1"
   },
   "jest": {
     "moduleFileExtensions": [
