--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "include": [
     "src/@types/**/*.d.ts",
     "src/**/*",
-    "prisma/**/*.ts"
+    "prisma/**/*.ts",
+    "commitlint.config.mjs"
    ],
   "compilerOptions": {
     "module": "commonjs",
@@ -16,6 +17,8 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "allowJs": true,
+    "checkJs": false,
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
